--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,67 +31,113 @@
     <div class="container">
       <!-- Timeblocks go here -->
 
-      <div class="row">
+      <div class="row time-block" data-hour="9">
         <div class="col-1 hour">9am</div>
-        <input class="col-10 textarea"></input>
-        <button class="col-1 saveBtn"></button>
-      </div>
-      <div class="row">
-        <div class="col-1 hour">10am</div>
-        <input class="col-10 textarea"></input>
-        <button class="col-1 saveBtn"></button>
-      </div>
-
-      <div class="row">
-        <div class="col-1 hour">11am</div>
-        <input class="col-10 textarea"></input>
-        <button class="col-1 saveBtn"></button>
+        <textarea
+          data-task="9"
+          type="text"
+          class="col-10 textarea task"
+          id="9"
+          ></textarea>
+        <button class="col-1 saveBtn fas fa-archive"></button>
       </div>
 
-      <div class="row">
-        <div class="col-1 hour">12pm</div>
-        <input class="col-10 textarea"></input>
-        <button class="col-1 saveBtn"></button>
+
+      <div class="row time-block" data-hour="10">
+        <div  class="col-1 hour">10am</div>
+        <textarea data-task="10" type="text" class="col-10 textarea task" id="10"></textarea>
+        <button class="col-1 saveBtn fas fa-archive"></button>
       </div>
 
-      <div class="row">
-        <div class="col-1 hour">1pm</div>
-        <input class="col-10 textarea"></input>
-        <button class="col-1 saveBtn"></button>
+
+      <div class="row time-block" data-hour="11">
+        <div  class="col-1 hour">11am</div>
+        <textarea
+          data-task="11"
+          type="text"
+          class="col-10 textarea"
+          id="11"
+          ></textarea>
+        <button class="col-1 saveBtn fas fa-archive task"></button>
       </div>
 
-      <div class="row">
-        <div class="col-1 hour">2pm</div>
-        <input class="col-10 textarea"></input>
-        <button class="col-1 saveBtn"></button>
+
+      <div class="row time-block" data-hour="12">
+        <div  class="col-1 hour">12pm</div>
+        <textarea
+          data-task="12"
+          type="text"
+          class="col-10 textarea task"
+          id= "12"
+          ></textarea>
+        <button class="col-1 saveBtn fas fa-archive"></button>
       </div>
 
-      <div class="row">
-        <div class="col-1 hour">3pm</div>
-        <input class="col-10 textarea"></input>
-        <button class="col-1 saveBtn"></button>
+
+      <div class="row time-block" data-hour="1">
+        <div  class="col-1 hour">1pm</div>
+        <textarea
+          data-task="1"
+          type="text"
+          class="col-10 textarea task"
+          id="1"
+          ></textarea>
+        <button class="col-1 saveBtn fas fa-archive"></button>
       </div>
 
-      <div class="row">
-        <div class="col-1 hour">4pm</div>
-        <input class="col-10 textarea"></input>
-        <button class="col-1 saveBtn"></button>
+
+      <div class="row time-block" data-hour="2">
+        <div  class="col-1 hour">2pm</div>
+        <textarea
+          data-task="2"
+          type="text"
+          class="col-10 textarea task"
+          id="2"
+          ></textarea>
+        <button class="col-1 saveBtn fas fa-archive"></button>
       </div>
 
-      <div class="row">
-        <div class="col-1 hour">5pm</div>
-        <input class="col-10 textarea"></input>
-        <button class="col-1 saveBtn"></button>
+
+      <div class="row time-block" data-hour="3">
+        <div  class="col-1 hour">3pm</div>
+        <textarea
+          data-task="3"
+          type="text"
+          class="col-10 textarea task"
+          id="3"
+          ></textarea>
+        <button class="col-1 saveBtn fas fa-archive"></button>
+      </div>
+
+
+      <div class="row time-block" data-hour="4">
+        <div  class="col-1 hour">4pm</div>
+        <textarea
+          data-task="4"
+          type="text"
+          class="col-10 textarea task"
+          id="4"
+          ></textarea>
+        <button class="col-1 saveBtn fas fa-archive"></button>
+      </div>
+
+
+      <div class="row time-block" data-hour="5">
+        <div  class="col-1 hour">5pm</div>
+        <textarea
+          data-task="5"
+          type="text"
+          class="col-10 textarea task"
+          id="5"
+          ></textarea>
+        <button class="col-1 saveBtn fas fa-archive"></button>
       </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js"></script>
-    <script>
-      // Current date and time
-      const momentElement = moment();
-      $(currentDay).text(momentElement.format("dddd Mo MMMM YYYY"));
+    
     </script>
   </body>
 </html>
